# Grouper

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.rst  LICENSE.txt  README.md  codecov.yml  config.json  environment-docs.yml  environment.yml  exhaustive_generation.ipynb  performance.ipynb  performance_testing.py  pyproject.toml  requirements.txt  run_exhaustive_generate.py  run_generation_eval.py  run_random_generate.py  setup.py
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: docs.yml  run_test.yml
Grouper/: __init__.py  binding.cpp  codecov.yml  colorPermutations.cuh  constraints.cpp  counting.py  dataStructures.cpp  dataStructures.hpp  fragmentation.cpp  fragmentation.hpp  fragmentation.py  generate.cpp  generate.hpp  io.py  processColoredGraphs.cpp  processColoredGraphs.hpp  sampler.cpp  sampler.hpp  utils.py
Grouper/libraries/: Libraries.py  __init__.py
Grouper/tests/: base_test.py  conftest.py  test_constraints.py  test_counting.py  test_data_structures.py  test_exhaustive_fragmentation.py  test_fragmentation.py  test_generate.py  test_group_graph.py  test_interchangeable.py  test_libraries.py  test_python_fragmentation.py  test_sampler.py  test_utils.py  test_visualize.py
Grouper/visualization/: __init__.py  networkx.py  space_visualization.py  visualize_graph.py  visualize_node.py  visualize_space.py
docs/: conf.py  cpp_bindings.rst  index.rst  requirements.txt
genGrouper/: __init__.py  autUtils.cpp  autUtils.hpp  binding.cpp  colorPermutations.cu  colorPermutations.cuh  dataStructures.cpp  dataStructures.hpp  debugTools.cpp  debugTools.hpp  debug_tools.cpp  edge_coloring.py  edge_coloring_mp.py  fragmentation.cpp  fragmentation.hpp  generate.cpp  generate.hpp  generate.py  io.py  main.cpp  post_process.py  processColoredGraphs.cpp  processColoredGraphs.hpp  utils.py
genGrouper/tests/: base_test.py  test_fragmentation.py  test_generate.py  test_group_graph.py  test_visualize.py
genGrouper/visualization/: __init__.py  backup_networkx.py  networkx.py  space_visualization.py
images/: README.md
molGrouper/: GroupGraph.cpp  GroupGraph.h  __init__.py  binding.cpp  dataStructures.cpp  dataStructures.h  dataStructures.hpp  edge_coloring.py  edge_coloring_mp.py  generate.cpp  generate.py  group_graph.py  post_process.py  processColoredGraphs.cpp  process_colored_graphs.cpp  utils.py
molGrouper/cpp_code/: CMakeLists.txt  GroupGraph.cpp  foo_cpp.py  foo_python.py  groupGraphBindings.cpp  processMultig.cpp  process_colored_graphs.cpp  test_cpp.py  vcolg_out.txt
molGrouper/cpp_code/basic_examples/rd/: CMakeLists.txt
molGrouper/cpp_code/basic_examples/rd/src/: main.cpp
molGrouper/cpp_code/rdkit_cpu/: CMakeLists.txt  geng_out.txt  vcolg_out.txt
molGrouper/cpp_code/rdkit_cpu/src/: GroupGraph.cpp  binding.cpp  main.cpp  process_colored_graphs.cpp
molGrouper/cpp_code/rdkit_gpu/: CMakeLists.txt
molGrouper/cpp_code/rdkit_gpu/src/: GroupGraph.cpp  kernel.cu  main.cpp  process_colored_graphs.cpp
molGrouper/cpp_code/rdkit_group_graph/: CMakeLists.txt
molGrouper/cpp_code/rdkit_group_graph/src/: main.cpp  process_colored_graphs.cpp
molGrouper/cpp_code/smiles_gen/: CMakeLists.txt
molGrouper/cpp_code/smiles_gen/src/: main.cpp
molGrouper/tests/: base_test.py  test_generate.py  test_group_graph.py  test_visualize.py
molGrouper/visualization/: __init__.py  backup_networkx.py  networkx.py
submission_scripts/: cpu_submit_to_cluster.sh  gpu_submit_to_cluster.sh  performance_eval.sh  performance_testing_cpu.sh  performance_testing_gpu.sh
tests/: test_generate.py  test_group_graph.py
