[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "Grouper"
version = "0.1"
description = "A package for working with group graphs"
authors = [{name = "Kieran Nehil-Puleo"}]
requires-python = ">=3.9"

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.expand-macos-universal-tags = true

[tool.setuptools]
packages = ["Grouper"]