[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "Grouper"
description = "A package for working with group graphs"
readme = "README.md"
authors = [{name = "Kieran Nehil-Puleo"}]
maintainers = [
  {name = "Nicholas Craven", email = "nicholas.c.craven@vanderbilt.edu"},
  {name = "Kieran Nehil-Puleo", email = "kieran.d.nehil-puleo@vanderbilt.edu"},
]
license= {text = "MIT"}
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dynamic = ["version"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.expand-macos-universal-tags = true
build-dir = "build/{wheel_tag}" # Install the package in editable mode
editable.mode = "redirect"

[tool.setuptools]
packages = ["Grouper"]

[tool.pytest.ini_options]
addopts = "--cov=Grouper --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["Grouper"] # Adjust based on your project structure
branch = true # Include branch coverage

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.bumpversion]
current_version = "0.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = "--no-verify"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
